# IU7-Computer-Graphics

./: README.md
lab_01/: interface.py  main.py  test.py
lab_01/src/: geom.py  interface.py  lib.txt  main.py  my.txt  test.py
lab_02/src/: geom.py  interface.py  main.py
lab_03/: CMakeLists.txt  bresenham.cpp  bresenham.hpp  color.cpp  color.hpp  commands.hpp  compare.cpp  compare.hpp  dda.cpp  dda.hpp  dot.hpp  draw.cpp  draw.hpp  errors.hpp  ladder.cpp  ladder.hpp  line.hpp  logger.h  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  timer.hpp  uimanager.cpp  uimanager.hpp  wu.cpp  wu.hpp
lab_04/: CMakeLists.txt
lab_04/src/: logger.h
lab_04/src/benchmarks/: benchmarks.cpp  benchmarks.hpp  timer.hpp
lab_04/src/draw/: draw.cpp  draw.hpp
lab_04/src/methods/: bresenhem.cpp  bresenhem.hpp  canonical.cpp  canonical.hpp  methods.hpp  middlep.cpp  middlep.hpp  parametric.cpp  parametric.hpp
lab_04/src/ui/: color.cpp  color.hpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
lab_05/src/: main.py  mainwindow.ui
lab_06/src/: main.py  mainwindow.ui
lab_07/src/: cut.py  cutter.py  line.py  main.py  mainwindow.ui
lab_08/src/: cut.py  main.py  mainwindow.ui  scene.py
lab_09/src/: cut.py  main.py  scene.py
